add [jvm file encoding]